--- a/src/Components/ReposList/ReposList.module.css
+++ b/src/Components/ReposList/ReposList.module.css
@@ -26,3 +26,17 @@
     text-decoration: none;
 
 }
+.input {
+    width: 100%;
+    padding: 0.5rem; 
+    border: 1px solid #ccc;
+    border-radius: 4px; 
+    box-sizing: border-box; 
+}
+
+.label {
+    display: block; 
+    margin-bottom: 0.5rem; 
+    font-weight: bold;
+    margin-top: 3rem;
+}
